src/testsuite/semantic_analysis/testIfs2.yal
module testIfs2 {
	
	function f(){
		x = 6;
		while( x < 10){
			y = 7; //error
		}
		x = y; //error
		
	}
}
